public class Main {
    public static void main(String[] args) {
        SistemaJuego sistema = new SistemaJuego();
        sistema.iniciar();
    }
}